<resources>
    <string name="app_name">Restoramba</string>
    <string name="about">About</string>/string
    <string name="map">Map</string>/string
    <string name="user_location">User Location</string>
    <string name="driving">Driving</string>
    <string name="mapobjects">Map Objects</string>
    <string name="customization">Customization</string>

    <string name="search">Search</string>
    <string name="suggest">Suggest</string>
    <string name="panorama">Panorama</string>
    <string name="custom_layer">Custom Layer</string>
    <string name="masstransit_routing">Masstransit routing</string>
    <string name="clustering">Clustering</string>
    <string name="jams">Jams</string>
    <string name="selection">Selection</string>
    <string name="cluster_tap_message">Tapped cluster with %d items</string>

    <string name="not_found_error_message">Not found</string>
    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="unknown_error_message">Unknown error</string>

    <string name="package_name">com.yandex.mapkitdemo</string>

    <string name="mapkit_version_label">MapKit version</string>

    //mobile
    <string name="restoramba">RESTORAMBA</string>
    <string name="get_random_dish">Получить случайное блюдо</string>
    <string name="restaurants">Рестораны</string>
    <string name="restaurant">Ресторан</string>
    <string name="radio_dish">Блюдо</string>
    <string name="search_nav">Поиск</string>
    <string name="main_nav">Главная</string>
    <string name="maps_nav">Карты</string>
    <string name="question">Вопросы</string>
    <string name="welcome">Добро пожаловать в RESTORAMBA!</string>
    <string name="instructions">Инструкция</string>
    <string name="example">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
    </string>
    <string name="text_restaurant_example">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
    </string>
    <string name="text_dish_example">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..
    </string>
    <string name="question_instructions">Вы готовы использовать RESTORAMBA?</string>
    <string name="yes">ДА!</string>
    <string name="sum">400 руб</string>
    <string name="price_sum">Цена: 650 руб</string>
    <string name="rest">Какой-то ресторан</string>
    <string name="dish">Какое-то блюдо</string>
    <string name="path_to_me">Расстояние до вас: 700м</string>
    <string name="show_on_map">Посмотреть на карте</string>
    <string name="menu">Меню</string>
    <string name="name_dish">Название блюда</string>
    <string name="kcal">1000 ккал</string>
    <string name="gr">300 гр</string>
    <string name="rub">650 руб</string>
    <string name="hint_restaurant">Введите название ресторана…</string>
    <string name="hint_dish">Введите название блюда…</string>
    <string name="search_description">Воспользуйтесь поиском, чтобы найти блюдо или ресторан</string>
    <string name="empty_result_search">Извините, ничего не найдено</string>
    <string name="another">Ещё одно!</string>
    <string name="more_details">Подробнее</string>
    <string name="desc_question">Ответы на популярные вопросы</string>
    <string name="question_1">Как пользоваться нашим приложением?</string>
    <string name="question_2">Что еще я могу сделать?</string>
    <string name="question_3">Как найти меню ресторана?</string>
    <string name="question_4">Как предложить добавление нового ресторана или блюда?</string>
    <string name="answer_1">Чтобы получить случайное блюдо – просто встряхните телефон!</string>
    <string name="answer_2">Вы можете посмотреть список ресторанов города Екатеринбург на карте, а так же меню этих ресторанов!</string>
    <string name="answer_3">Чтобы найти меню ресторана, откройте карточку этого ресторана и пролистайте вниз. Там вы найдете раздел с меню, где будут перечислены все доступные блюда.</string>
    <string name="answer_4">Если вы хотите добавить новый ресторан или блюдо в наше приложение – перейдите на страницу "Вопросы" и выберите опцию "Предложить новый ресторан или новое блюдо". Заполните форму с необходимой информацией, и мы рассмотрим ваше предложение.</string>
    <string name="bt_form">Предложить новый ресторан или новое блюдо</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>