<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idNavPages"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_green">

    <TextView
        android:id="@+id/idNavRestaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginBottom="34dp"
        android:drawableTop="@drawable/food_nav"
        android:drawablePadding="8dp"
        android:gravity="center|top"
        android:text="@string/restaurants"
        android:textAppearance="@style/nav_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/idNavSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/search_nav"
        android:drawablePadding="10dp"
        android:gravity="center|top"
        android:text="@string/search_nav"
        android:textAppearance="@style/nav_text"
        app:layout_constraintBottom_toBottomOf="@+id/idNavRestaurants"
        app:layout_constraintEnd_toStartOf="@+id/idNavMain"
        app:layout_constraintStart_toEndOf="@+id/idNavRestaurants" />

    <TextView
        android:id="@+id/idNavMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/home"
        android:drawablePadding="8dp"
        android:text="@string/main_nav"
        android:gravity="center|top"
        android:textAppearance="@style/nav_text"
        app:layout_constraintBottom_toBottomOf="@+id/idNavSearch"
        app:layout_constraintEnd_toStartOf="@+id/idNavQuestions"
        app:layout_constraintStart_toEndOf="@+id/idNavRestaurants" />

    <TextView
        android:id="@+id/idNavMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/place_marker"
        android:drawablePadding="8dp"
        android:gravity="center|top"
        android:text="@string/maps_nav"
        android:textAppearance="@style/nav_text"
        app:layout_constraintBottom_toBottomOf="@+id/idNavMain"
        app:layout_constraintEnd_toStartOf="@+id/idNavQuestions"
        app:layout_constraintStart_toEndOf="@+id/idNavMain" />

    <TextView
        android:id="@+id/idNavQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="22dp"
        android:drawableTop="@drawable/ask_question"
        android:drawablePadding="8dp"
        android:text="@string/question"
        android:gravity="center|top"
        android:textAppearance="@style/nav_text"
        app:layout_constraintBottom_toBottomOf="@+id/idNavMap"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>