<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/milk">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/idPageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/idNameApplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="74dp"
            android:text="@string/restoramba"
            android:textAppearance="@style/restoramba"
            android:textColor="@color/black_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/idNav"
        app:layout_constraintTop_toBottomOf="@+id/idPageHeader">

        <TextView
            android:id="@+id/idSearchDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/search_description"
            android:textAppearance="@style/kcal"
            android:textColor="@color/black_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/idRadioChange"
            android:layout_width="244dp"
            android:layout_height="28dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/black_green_font"
            android:checkedButton="@+id/offer"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/idSearchDescription"
            app:layout_constraintStart_toStartOf="@+id/idSearchDescription"
            app:layout_constraintTop_toBottomOf="@+id/idSearchDescription">

            <RadioButton
                android:id="@+id/idDish"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/switch_bg_color_search_page"
                android:button="@null"
                android:gravity="center"
                android:text="@string/radio_dish"
                android:textAppearance="@style/radio_button"
                android:textColor="@drawable/switch_text_color_search_page" />

            <RadioButton
                android:id="@+id/idRestaurant"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/switch_bg_color_search_page"
                android:button="@null"
                android:gravity="center"
                android:text="@string/restaurant"
                android:checked="true"
                android:textAppearance="@style/radio_button"
                android:textColor="@drawable/switch_text_color_search_page" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/idNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/idNavRestaurants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginBottom="34dp"
            android:textColor="@color/black_green"
            android:drawablePadding="8dp"
            android:gravity="center|top"
            android:text="@string/restaurants"
            android:textAppearance="@style/nav_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:drawableTopCompat="@drawable/food_restaurants"
            app:drawableTint="@color/black_green" />

        <TextView
            android:id="@+id/idNavSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="center|top"
            android:text="@string/search_nav"
            android:textColor="@color/orange"
            android:textAppearance="@style/nav_text"
            app:layout_constraintBottom_toBottomOf="@+id/idNavRestaurants"
            app:layout_constraintEnd_toStartOf="@+id/idNavMain"
            app:layout_constraintStart_toEndOf="@+id/idNavRestaurants"
            app:drawableTopCompat="@drawable/icon_search_41_41"
            app:drawableTint="@color/orange" />

        <TextView
            android:id="@+id/idNavMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/main_nav"
            android:textColor="@color/black_green"
            android:gravity="center|top"
            android:textAppearance="@style/nav_text"
            app:layout_constraintBottom_toBottomOf="@+id/idNavSearch"
            app:layout_constraintEnd_toStartOf="@+id/idNavQuestions"
            app:layout_constraintStart_toEndOf="@+id/idNavRestaurants"
            app:drawableTopCompat="@drawable/icon_main_home"
            app:drawableTint="@color/black_green" />

        <TextView
            android:id="@+id/idNavMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center|top"
            android:text="@string/maps_nav"
            android:textColor="@color/black_green"
            android:textAppearance="@style/nav_text"
            app:layout_constraintBottom_toBottomOf="@+id/idNavMain"
            app:layout_constraintEnd_toStartOf="@+id/idNavQuestions"
            app:layout_constraintStart_toEndOf="@+id/idNavMain"
            app:drawableTopCompat="@drawable/icon_location_41_41"
            app:drawableTint="@color/black_green"/>

        <TextView
            android:id="@+id/idNavQuestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:drawablePadding="8dp"
            android:text="@string/question"
            android:textColor="@color/black_green"
            android:gravity="center|top"
            android:textAppearance="@style/nav_text"
            app:layout_constraintBottom_toBottomOf="@+id/idNavMap"
            app:layout_constraintEnd_toEndOf="parent"
            app:drawableTopCompat="@drawable/icon_question_41_41"
            app:drawableTint="@color/black_green"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>